--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "antd": "^5.4.6",
@@ -57,7 +58,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "node-sass": "^7.0.3",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "react-redux": "^8.0.5"
   },
   "husky": {
     "hooks": {
