--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^5.59.1",
     "antd": "^5.4.6",
     "axios": "^1.4.0",
+    "bignumber.js": "^9.1.1",
     "classnames": "^2.3.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
